kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marketing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: marketing
  template:
    metadata:
      labels:
        app: marketing
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
        - name: marketing
          image: marketing
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
        - name: app
          image: app 
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: marketing
spec:
  type: ClusterIP
  ports:
    - port: 3000
  selector:
    app: marketing
---
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  type: ClusterIP
  ports:
    - port: 3000
  selector:
    app: app
